--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,8 @@ description: > # this means to ignore newlines until "baseurl:"
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://freshbrewedweb.com" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: freshbreweddev
-github_username:  greghunt
+github_username: greghunt
+calendly: https://calendly.com/freshbrewedweb
 google_analytics: UA-71779695-1
 
 # Build settings
